# Exceptions

./: .gitignore  Ensure.cs  EnsureAlwaysExtensionRoot.cs  EnsureAlwaysExtensions.cs  EnsureExtensions.cs  EnsureOnDebugExtensionRoot.cs  EnsureOnDebugExtensions.cs  ExceptionExtensions.cs  IgnoredExceptions.cs  Platform.Exceptions.csproj  Platform.Exceptions.sln  README.html  README.md  Throw.cs  ThrowExtensionRoot.cs  ThrowExtensions.cs  index.html  index.json  manifest.json  push-nuget.bat  toc.html  xrefmap.yml
cpp/: CMakeLists.txt  conanfile.txt  install-conan-dependencies.sh  install-local-conan-dependencies.sh
cpp/Platform.Exceptions/: Ensure.cpp  Ensure.h  EnsureAlwaysExtensionRoot.cpp  EnsureExtensions.cpp  EnsureExtensions.h  EnsureOnDebugExtensionRoot.cpp  ExceptionExtensions.cpp  ExceptionExtensions.h  IgnoredExceptions.cpp  IgnoredExceptions.h  Platform.Exceptions.TemplateLibrary.nuspec  Platform.Exceptions.TemplateLibrary.vcxitems  Platform.Exceptions.TemplateLibrary.vcxproj  Platform.Exceptions.TemplateLibrary.vcxproj.filters  Platform.Exceptions.h  Throw.cpp  Throw.h  ThrowExtensionRoot.cpp  ThrowExtensions.cpp  ThrowExtensions.h
cpp/Platform.Exceptions.Tests/: AllTests.cpp  EnsuranceTests.cpp  EnsuranceTests.h  EnsureAlwaysExtensions.cpp  EnsureExtensions.cpp  IgnoredEnsuranceTests.cpp  Platform.Exceptions.TemplateLibrary.Tests.vcxproj  packages.config  pch.h
cpp/Platform.Exceptions.Tests/Ignore/: EnsureExtensions.cpp  IgnoredEnsuranceTests.cpp  IgnoredEnsuranceTests.h
cpp/Platform.Exceptions/ExtensionRoots/: EnsureAlwaysExtensionRoot.h
(+72 files in other folders)
